==================================================================================================
Changes for 2.9.1 release 
==================================================================================================
- Bug Fix (732): AUTOCAL of 18bit DAC modules made the default compile option in feCodeGen.pl.
- Bug Fix (505): Added warning bit (bit 10) to STATEWORD to be set if either the Coeff File or
  DAQ config file has changed.
- Bug Fix (772,773): SDF save issues bug fixes perfomed in src/epics/seq/main.c.
- Bug Fix (729): Errant value if input to TrueRMS = 0.0.
- Bug Fix (764): Modified RampMuxMatrix part to only check load ramp command at 16Hz after a
  16Hz boundary.  This allows load command to be captured by DAQ before being cleared by the FE
  code.
- Bug Fix (732,765): Correct DAQD output for "status channel 2","status channel 3" to fix 
    formatting, speed-up - incremented protocol from 12.0 to 12.1
- Bug Fix (762): DAQ error bit of STATEWORD adjusted to set error at 4MByte/sec, previously 3.5.
- Bug Fix(758): Removed load matrix reset from being placed at the end of code cycle in RampMuxMatrix.pm.
  This is already done properly in the matrix part code itself and this added clearing can result
  in the race condition ie sometimes load matrix command ignored.
==================================================================================================
Changes for 2.9 
==================================================================================================
- Modified ADC overflow reporting, same as done for DAC outputs.
- Added capability to define engineering units, for both fast/slow channels, to be passed and to
  and recorded by DAQ system.
- Modified FiltCtrl.pm (Filter Module w/Control) such that is requires that all inputs be
  connected or build process will exit with error message.
- Modified DAC overrange reporting (Bug #722).
	- Removed ROLLING_OVERFLOWS compile option, which set EPICS record to report overrange per